--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@formspree/react": "^2.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,7 +14,6 @@
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
@@ -23,7 +21,6 @@
     "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
-    "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -52,9 +49,7 @@
   },
   "devDependencies": {
     "@types/react-animate-on-scroll": "^2.1.5",
-    "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-hash-link": "^2.4.4",
-    "@types/styled-components": "^5.1.18",
-    "@types/validator": "^13.7.1"
+    "@types/styled-components": "^5.1.18"
   }
 }
